# server

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: README.md  SUMMARY.md  api.md  book.toml  cli.md  concepts.md  self-hosting.md
docs/libraries/: README.md  csharp.md  python.md  typescript.md
docs/typst/: README.md  util.md
examples/sdks/dotnet/Reportobello.Blazor.Demo/: Reportobello.Blazor.Demo.sln
examples/sdks/dotnet/Reportobello.Blazor.Demo/Reportobello.Blazor.Demo/: Program.cs  README.md  Reportobello.Blazor.Demo.csproj  appsettings.Development.json
examples/sdks/dotnet/Reportobello.Blazor.Demo/Reportobello.Blazor.Demo/Components/: App.razor  _Imports.razor
examples/sdks/dotnet/Reportobello.Blazor.Demo/Reportobello.Blazor.Demo/Components/Pages/: Home.razor  Home.razor.cs  Home.razor.css
examples/sdks/dotnet/Reportobello.Blazor.Demo/Reportobello.Blazor.Demo/Properties/: launchSettings.json
examples/sdks/dotnet/Reportobello.Blazor.Demo/Reportobello.Blazor.Demo/Reports/: GenericReport.typst
examples/sdks/dotnet/Reportobello.Blazor.Demo/Reportobello.Blazor.Demo/wwwroot/: app.css
examples/sdks/python/: README.md  all_in_one.py  report.typ  requirements.txt
examples/sdks/typescript/plain-js/: README.md  index.html  package.json
examples/templates/barcode/: report.typ
examples/templates/invoice/: data.json  report.typ
examples/templates/purchase_order/: data.json  report.typ
reportobello/: __main__.py  config.py
reportobello/api/: api.py  common.py  jaeger.py  legal.py  limiter.py  middleware.py  router.py
reportobello/api/page/: homepage.py  login.py  logout.py  router.py  settings.py  survey.py  svgs.py
reportobello/api/page/provider/github/: router.py
reportobello/api/page/template/: router.py
reportobello/application/: build_pdf.py  convert.py
reportobello/domain/: file.py  report.py  template.py  user.py
reportobello/infra/: db.py  docker.py  job_queue.py  logging.py  otel.py  retention.py
reportobello/infra/seed/: invoice.typ  user.py
reportobello/scripts/: mint_api_key  mint_api_key.py
reportobello/x2typst/: .dockerignore  Dockerfile  __main__.py  build.sh  core.py  main.py  node.py  pipe.py  requirements.txt  typst.py
templates/: base.html  homepage.html  login.html  settings.html  survey.html
templates/template/: build_history_list.html  files_list.html  index.html  row_loader.html
test/: test_x2typst.py
www/: cookies.html  index.html  package-lock.json  package.json  privacy.html  terms.html
