[project]
name = "reportobello-server"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "domin8==3.0.0rc1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.32.1",
    "opentelemetry-exporter-otlp-proto-http>=1.32.1",
    "opentelemetry-instrumentation-fastapi>=0.53b1",
    "opentelemetry-instrumentation-sqlite3>=0.53b1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests-oauthlib>=2.0.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.22",
    "pymupdfpro>=1.25.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.setuptools]
packages = ["reportobello"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
