[project]
name = "reportobello-server"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "opentelemetry-api>=1.32.1",
    "opentelemetry-exporter-otlp-proto-http>=1.32.1",
    "opentelemetry-instrumentation-fastapi>=0.53b1",
    "opentelemetry-instrumentation-sqlite3>=0.53b1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests-oauthlib>=2.0.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.22",
    "pymupdfpro>=1.25.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
    "types-requests-oauthlib>=2.0.0.20250306",
]

[tool.setuptools]
packages = ["reportobello"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
exclude_lines = [
  "raise NotImplementedError",
  "pragma: no cover",
  "assert False",
  "if TYPE_CHECKING",
]
skip_covered = true
skip_empty = true

[tool.pytest.ini_options]
addopts = "--cov=reportobello --cov-report=html --cov-report=term-missing --cov-fail-under=36 --disable-warnings"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["test"]

[tool.ruff]
line-length = 120
preview = true
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]

extend-ignore = [
  "B011",

  "COM812",

  "CPY001",

  "D100", "D101", "D102", "D103", "D104", "D105", "D107",
  "D200", "D202", "D203", "D205", "D211", "D212",

  "DOC201",

  "EM101",
  "E402",

  "F403", "F405",
  "FIX002",
  "TD002", "TD003",

  "N806", "N818",

  "S101",
  "S404",

  "PLW0603",
  "PLW1510",


  # TODO: re-enable if/when explicit numbers are able to be excluded
  "PLR2004",

  # Fix soon
  "EM102",
  "PLW2901",
  "S104",
  "TRY003",

  # Enable once mypy is added
  "ANN401",
  "PGH003",
  "UP046",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?)|request)$"

[tool.ruff.lint.per-file-ignores]
"reportobello/*" = ["PT015"]
"reportobello/api/api.py" = ["ANN201", "E501", "PLR0913", "PLR0917"]
"reportobello/api/middleware.py" = ["ANN202", "ANN001"]
"reportobello/api/page/*" = ["ANN202"]
"reportobello/api/page/template/router.py" = ["E501"]
"reportobello/x2typst/*" = ["ARG002", "C901", "PLR0912", "PLR6301", "PLR0914", "PLR0915", "PLR0911", "PLR0917"]
"reportobello/x2typst/main.py" = ["PLR0913"]
"reportobello/x2typst/typst.py" = []

[tool.mypy]
namespace_packages = true
strict = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_unimported = true
warn_unreachable = true
allow_redefinition = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "reportobello.api.api"
disallow_any_decorated = false

[[tool.mypy.overrides]]
module = "reportobello.api.page.*"
disallow_any_decorated = false
